--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./index.js"></script>
+    <script defer src="./event.js"></script>
   </head>
   <body>
-    <p id="para">Lorem ipsum dolor sit amet.</p>
+    <h1>title</h1>
+    <div value="vasanth" id="para">Lorem ipsum dolor sit amet.</div>
+    <button id="btn">submit</button>
   </body>
 </html>
